Fix css inconsistencies

--- a/resources/sass/theme/default/app.scss
+++ b/resources/sass/theme/default/app.scss
@@ -1,6 +1,7 @@
 // To customize the colors, edit _variables.scss
 //@import 'variables';
 //@import '../../base';
+@import 'modern-normalize/modern-normalize.css';
 
 // The contrast ratio to reach against white, to determine if color changes from "light" to "dark". Acceptable values for WCAG 2.0 are 3, 4.5 and 7.
 // See https://www.w3.org/TR/WCAG20/#visual-audio-contrast-contrast
