--- a/resources/sass/theme/default/app.scss
+++ b/resources/sass/theme/default/app.scss
@@ -229,3 +229,18 @@ a[data-target="safeLink"] {
         color: $primaryDarkColor;
     }
 }
+.p-buttongroup{
+    .p-button{
+        &:first-child{
+            border-top-right-radius: 0;
+            border-bottom-right-radius: 0;
+        }
+        &:last-child{
+            border-top-left-radius: 0;
+            border-bottom-left-radius: 0;
+        }
+        &:not(:first-child):not(:last-child){
+            border-radius: 0;
+        }
+    }
+}
