Refactor Room File and Room History Tab; Refactor Join/Start Button

--- a/resources/sass/app/_action-column.scss
+++ b/resources/sass/app/_action-column.scss
@@ -1,10 +1,3 @@
 .action-column{
-    // width of the default three action buttons (view, edit, delete) + cell padding
-    width: calc(3 * #{$action-column-button-width}); //TODO + 2 * #{$table-cell-padding});
-}
-.action-button{
-    button, a {
-        width: $action-column-button-width;
-        height: $action-column-button-height;
-    }
+    width: 1px;
 }
