--- a/resources/sass/theme/default/app.scss
+++ b/resources/sass/theme/default/app.scss
@@ -266,3 +266,22 @@ a[data-target="safeLink"] {
         opacity: 1;
     }
 }
+
+.p-menubar-mobile {
+    justify-content: space-between;
+    width: 100%;
+}
+
+.main-menu-right {
+    .user-avatar {
+        > .p-menuitem-content {
+            > .p-menuitem-link {
+                padding: 0.25rem 0.5rem !important;
+            }
+        }
+    }
+
+    .p-menuitem-content, .p-menuitem-link {
+        height: 100%;
+    }
+}
