Refactor user profile

--- a/resources/sass/theme/default/_variables.scss
+++ b/resources/sass/theme/default/_variables.scss
@@ -210,6 +210,17 @@ $dangerButtonTextActiveColor: color-contrast($dangerButtonActiveBg) !default;
 $dangerButtonActiveBorderColor: shade-color($danger, 40%) !default;
 $dangerButtonFocusShadow:0 0 0 0.2rem tint-color($danger, 90%) !default;
 
+$contrastButtonBg:$shade900 !default;
+$contrastButtonTextColor: color-contrast($contrastButtonBg) !default;
+$contrastButtonBorder:1px solid $contrastButtonBg !default;
+$contrastButtonHoverBg:$shade800 !default;
+$contrastButtonTextHoverColor: color-contrast($contrastButtonHoverBg) !default;
+$contrastButtonHoverBorderColor: shade-color($contrastButtonBg, 20%) !default;
+$contrastButtonActiveBg: shade-color($contrastButtonBg, 40%) !default;
+$contrastButtonTextActiveColor: color-contrast($contrastButtonActiveBg) !default;
+$contrastButtonActiveBorderColor: shade-color($contrastButtonBg, 40%) !default;
+$contrastButtonFocusShadow:none !default;
+
 $linkButtonColor:$primaryDarkerColor !default;
 $linkButtonHoverColor:$primaryDarkerColor !default;
 $linkButtonTextHoverDecoration:underline !default;
@@ -592,6 +603,14 @@ $errorMessageBg:rgba(255, 231, 230, .7) !default;
 $errorMessageBorder:solid #ff5757 !default;
 $errorMessageTextColor:#ff5757 !default;
 $errorMessageIconColor:#ff5757 !default;
+$secondaryMessageBg:$secondaryButtonBg !default;
+$secondaryMessageBorder: solid $secondaryButtonBg !default;
+$secondaryMessageTextColor: $secondaryButtonTextColor !default;
+$secondaryMessageIconColor: $secondaryButtonTextColor !default;
+$contrastMessageBg: $contrastButtonBg !default;
+$contrastMessageBorder: solid $contrastButtonBg !default;
+$contrastMessageTextColor: $contrastButtonTextColor !default;
+$contrastMessageIconColor: $contrastButtonTextColor !default;
 
 //overlays
 $overlayContentBorder:0 none !default;
