--- a/resources/sass/theme/default/app.scss
+++ b/resources/sass/theme/default/app.scss
@@ -70,6 +70,7 @@ $fontFamily: SourceSansPro, sans-serif;
 @import '../../app/_room';
 @import '../../app/_profile-image';
 @import '../../app/_action-column';
+@import "../../app/_color-select";
 
 // Font Awesome
 $fa-font-path: "@fortawesome/fontawesome-free/webfonts";
