Use central role select component, hide arrow on disabled, fix tag unique issue

--- a/resources/sass/override/_multiselect.scss
+++ b/resources/sass/override/_multiselect.scss
@@ -2,6 +2,12 @@
     border-color: $danger;
 }
 
+.multiselect--disabled{
+    .multiselect__select {
+        display: none;
+    }
+}
+
 .multiselect__option--highlight {
     background: $success;
     color: text-color("success");
