--- a/resources/sass/theme/default/app.scss
+++ b/resources/sass/theme/default/app.scss
@@ -287,18 +287,8 @@ a[data-target="safeLink"] {
         height: 100%;
     }
 }
-.p-buttongroup{
-    .p-button{
-        &:first-child{
-            border-top-right-radius: 0;
-            border-bottom-right-radius: 0;
-        }
-        &:last-child{
-            border-top-left-radius: 0;
-            border-bottom-left-radius: 0;
-        }
-        &:not(:first-child):not(:last-child){
-            border-radius: 0;
-        }
-    }
+
+.p-password-input{
+    width: 100%;
 }
+
